# pdfquery

./: .gitignore  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  requirements.txt  requirements_py2.txt  requirements_py3.txt  setup.cfg  setup.py
pdfquery/: __init__.py  cache.py  pdfquery.py  pdftranslator.py
pdfquery.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
tests/: sample_output.xml  test_main.py  tests.py  utils.py
tests/saved_output/: IRS_1040A_output.xml  IRS_1040A_output_py35.xml  IRS_1040A_output_python_2.6.xml  bug28.xml  bug28_output.xml  bug28_output_python_2.6.xml
