
# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = pdfquery
version = 0.5.1.dev0
description = Concise and friendly PDF scraper using JQuery or XPath selectors
long_description = file: README.rst
license = MIT
author = Jack Cushman
author_email = jcushman@gmail.com
url = https://github.com/jcushman/pdfquery
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    cssselect
    chardet
    lxml
    pdfminer.six
    pyquery
    roman
tests_require =
    pytest
    tox
    pytest-remove-stale-bytecode

[options.extras_require]
dev = 
    pre-commit
    pdbpp
    black
    isort
    flake8
test =
    pytest
    pytest-remove-stale-bytecode
    tox
coverage = pytest-cov
docs =
    sphinx
    doc8
release = zest.releaser
pycodestyle = flake8

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 120
exclude = env,.tox,doc

[zest.releaser]
create-wheel = yes

[distutils]
index-servers = isp
